--- a/public/app/controllers/front.controller.jade
+++ b/public/app/controllers/front.controller.jade
@@ -1,7 +1,8 @@
 div(front-controller='', a-trianglify='', data-colors='Greens')
   .container(style='text-align:center')
     //- word-art(data-text='rangers town') test keyword
-    game-package(data-user='vm.user')  
+    //- game-package(data-user='vm.user') 
+    prototype 
   
   //- .container
     playing-card.card-lg.card-open.card-suit-s.card-rank-a
